# daily_task

./: .coverage  .coveragerc  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
accounts/: apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile_preferred_study_time_and_more.py
accounts/templates/: profile.html
accounts/templates/registration/: password_reset_email_html.html
accounts/test/: test_profile.py
app/: celery.py  forms.py  settings.py  tasks.py  urls.py  views.py
app/templates/: base.html  base_email.html  completed_studies.html  home.html  navbar.html  profile.html
app/templates/components/: _navbar.html  _timer_widget.html
task/: ai_providers.py  ai_services.py  exceptions.py  forms.py  models.py  services.py  signals.py  study_services.py  tasks.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_alter_taskday_unique_together_alter_taskday_date_and_more.py  0003_userprofile_dailyreminderlog.py  0004_delete_userprofile.py  0005_studysession_sessionpause_subject_topic_and_more.py  0006_taskday_data_migration.py  0007_studysession_journal_fields.py  0007_studysession_learning_note_studysession_next_step_and_more.py  0008_studyinsight.py  0009_complete_study_items.py
task/test/: test_ai_insights.py  test_dashboard_analytics.py  test_dashboard_integration.py  test_migrations.py  test_models.py  test_study_services.py  test_tasks.py
utils/: security.py
(+10 files in other folders)
