[project]
name = "daily-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaio Herculano",email = "kaioherculano12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref (==3.8.1)",
    "django (==5.2.3)",
    "django-bootstrap5 (==25.1)",
    "dotenv (==0.9.9)",
    "gunicorn (==23.0.0)",
    "packaging (==25.0)",
    "psycopg2-binary (==2.9.10)",
    "python-dateutil (==2.9.0.post0)",
    "python-decouple (==3.8)",
    "python-dotenv (==1.1.1)",
    "six (==1.17.0)",
    "sqlparse (==0.5.3)",
    "tzdata (==2025.2)",
    "whitenoise (==6.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
